# hw-1-nlp-hse-2022-AndBoyS

./: .gitignore  pyproject.toml
hw/: hw1.ipynb  utils.py
hw/data/: names.txt  top_nonstopwords.pkl
