[tool.poetry]
name = "hw-1-nlp-hse-2022-andboys"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_1_nlp_hse_2022_andboys"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
nltk = "^3.7"
numpy = "^1.23.4"
pandas = "^1.5.1"
pybind11 = "^2.10.1"
fasttext-wheel = "^0.9.2"
tensorflow = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
